# eight-queens

./: Cargo.toml  README.md  main.rs
